<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <steerclear.wm.view.ViewHeader
        android:id="@+id/activity_eta_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_header_layout_height"
        android:layout_alignParentTop="true"
        android:text="@string/header_text"
        android:layout_marginBottom="@dimen/activity_eta_header_bottom_margin" />

    <steerclear.wm.view.ViewTypefaceTextView
        android:id="@+id/activity_eta_time"
        android:layout_width="@dimen/view_eta_dimens"
        android:layout_height="@dimen/view_eta_dimens"
        android:gravity="center"
        android:textSize="@dimen/view_eta_text_size"
        android:textColor="@color/primary_dark"
        android:layout_centerInParent="true"
        app:drawCircle="true"
        tools:text="11:49" />

    <steerclear.wm.view.ViewTypefaceTextView
        android:id="@+id/activity_eta_time_prefix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="@dimen/view_eta_prefix_horizontal_margin"
        android:layout_marginRight="@dimen/view_eta_prefix_horizontal_margin"
        android:text="@string/activity_eta_formatted_title"
        android:textSize="@dimen/view_eta_prefix_text_size"
        android:textColor="@color/accent"
        android:layout_above="@id/activity_eta_time"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true" />

    <steerclear.wm.view.ViewFooter
        android:id="@+id/activity_eta_cancel_ride"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_footer_layout_height"
        android:text="@string/activity_eta_cancel_ride"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
