<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <steer.clear.view.ViewAuthenticateEditText
        android:id="@+id/fragment_authenticate_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_authenticate_edittext_height"
        android:layout_marginLeft="@dimen/fragment_authenticate_edittext_horizontal_margin"
        android:layout_marginStart="@dimen/fragment_authenticate_edittext_horizontal_margin"
        android:layout_marginRight="@dimen/fragment_authenticate_edittext_horizontal_margin"
        android:layout_marginEnd="@dimen/fragment_authenticate_edittext_horizontal_margin"
        android:layout_marginTop="@dimen/fragment_authenticate_register_top_margin"
        android:hint="@string/fragment_authenticate_username_hint"
        android:gravity="center"
        android:singleLine="true"
        tools:text="USERNAME" />

    <steer.clear.view.ViewAuthenticateEditText
        android:id="@+id/fragment_authenticate_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_authenticate_edittext_height"
        android:layout_marginLeft="@dimen/fragment_authenticate_edittext_horizontal_margin"
        android:layout_marginStart="@dimen/fragment_authenticate_edittext_horizontal_margin"
        android:layout_marginRight="@dimen/fragment_authenticate_edittext_horizontal_margin"
        android:layout_marginEnd="@dimen/fragment_authenticate_edittext_horizontal_margin"
        android:layout_below="@id/fragment_authenticate_username"
        android:inputType="textPassword"
        android:hint="@string/fragment_authenticate_password_hint"
        android:gravity="center"
        android:singleLine="true"
        tools:text="PASWORD" />

    <steer.clear.view.ViewAuthenticateEditText
        android:id="@+id/fragment_authenticate_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_authenticate_edittext_height"
        android:layout_marginLeft="@dimen/fragment_authenticate_edittext_horizontal_margin"
        android:layout_marginStart="@dimen/fragment_authenticate_edittext_horizontal_margin"
        android:layout_marginRight="@dimen/fragment_authenticate_edittext_horizontal_margin"
        android:layout_marginEnd="@dimen/fragment_authenticate_edittext_horizontal_margin"
        android:layout_below="@id/fragment_authenticate_password"
        android:inputType="phone"
        android:hint="@string/fragment_authenticate_phone_hint"
        android:gravity="center"
        android:singleLine="true"
        tools:text="PASWORD" />

    <steer.clear.view.ViewRectangleBackgroundButton
        android:id="@+id/fragment_authenticate_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginLeft="@dimen/fragment_authenticate_button_horizontal_margin"
        android:layout_marginStart="@dimen/fragment_authenticate_button_horizontal_margin"
        android:layout_marginRight="@dimen/fragment_authenticate_button_horizontal_margin"
        android:layout_marginEnd="@dimen/fragment_authenticate_button_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_authenticate_phone"
        android:text="@string/fragment_authenticate_register_text"
        android:textSize="@dimen/fragment_authenticate_button_text_size"
        android:layout_centerHorizontal="true" />

</RelativeLayout>