<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true" >

    <steerclear.wm.ui.view.ViewFooter
        android:id="@+id/fragment_map_post"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_footer_layout_height"
        android:text="@string/fragment_map_footer_text"
        android:layout_alignParentBottom="true" />

    <com.google.android.gms.maps.MapView
        android:visibility="gone"
        android:layout_above="@id/fragment_map_post"
        android:id="@+id/fragment_map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
   	
   	<steerclear.wm.ui.view.ViewAutoComplete
        android:id="@+id/fragment_map_pickup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:layout_marginStart="@dimen/fragment_map_autocomplete_margin"
        android:layout_marginLeft="@dimen/fragment_map_autocomplete_margin"
        android:layout_marginEnd="@dimen/fragment_map_autocomplete_margin"
        android:layout_marginRight="@dimen/fragment_map_autocomplete_margin"
        android:hint="@string/fragment_map_pickup_hint"
        android:textCursorDrawable="@null"
        android:drawableStart="@drawable/gold_block"
        android:drawableEnd="@drawable/ic_clear_black_24dp"
        app:highlightColor="@color/accent" />

    <steerclear.wm.ui.view.ViewAutoComplete
        android:id="@+id/fragment_map_dropoff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_map_pickup"
        android:layout_marginStart="@dimen/fragment_map_autocomplete_margin"
        android:layout_marginLeft="@dimen/fragment_map_autocomplete_margin"
        android:layout_marginEnd="@dimen/fragment_map_autocomplete_margin"
        android:layout_marginRight="@dimen/fragment_map_autocomplete_margin"
        android:hint="@string/fragment_map_dropoff_hint"
        android:textCursorDrawable="@null"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:drawableStart="@drawable/green_block"
        android:drawableEnd="@drawable/ic_clear_black_24dp"
        app:highlightColor="@color/primary_dark" />

    <LinearLayout
        android:id="@+id/fragment_map_marker_select_layout"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_above="@id/fragment_map_post"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:layout_marginBottom="@dimen/view_footer_top_margin"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/view_footer_layout_height" >

        <steerclear.wm.ui.view.ViewTypefaceButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/fragment_map_show_pickup_location"
            android:drawableStart="@drawable/gold_block"
            android:text="@string/fragment_map_marker_drop_pickup"
            android:paddingEnd="@dimen/view_typeface_button_padding"
            android:textAllCaps="true"
            app:preferredTextColor="@android:color/black"
            app:preferredTextSize="@dimen/view_typeface_button_small_text_size"
            app:drawBorder="true"
            app:fillOnClick="true"
            app:drawableColor="@color/accent"
            android:background="@null" />

        <steerclear.wm.ui.view.ViewTypefaceButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/fragment_map_show_dropoff_location"
            android:drawableEnd="@drawable/green_block"
            android:text="@string/fragment_map_marker_drop_dropoff"
            android:drawablePadding="5dp"
            android:paddingStart="@dimen/view_typeface_button_padding"
            android:textAllCaps="true"
            app:preferredTextColor="@android:color/black"
            app:preferredTextSize="@dimen/view_typeface_button_small_text_size"
            app:drawBorder="true"
            app:fillOnClick="true"
            app:drawableColor="@color/primary_dark"
            android:background="@null" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatImageButton
        android:layout_width="@dimen/fragment_map_my_location_dimens"
        android:layout_height="@dimen/fragment_map_my_location_dimens"
        android:src="@drawable/location"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:layout_above="@id/fragment_map_post"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:layout_alignBottom="@id/fragment_map_marker_select_layout"
        android:padding="@dimen/fragment_map_my_location_padding"
        android:layout_marginEnd="@dimen/fragment_map_autocomplete_margin"
        android:id="@+id/fragment_map_current_location" />

</RelativeLayout>
